--- a/src/assets/languages/language.us.json
+++ b/src/assets/languages/language.us.json
@@ -18,43 +18,25 @@
         "groupSystem": "System",
         "groupOther": "Other",
         "organizations": "Organization",
-        "roles": "Roles",
         "settings": "Settings",
-        "users": "Users",
-        "courses": "Courses",
-        "feeds": "Feeds",
-        "classes": "Classes",
-        "registrations": "Registrations",
-        "subjects": "Subjects",
-        "periods": "Periods"
+        "curencies": "Curencies"
     },
     "organization": {
         "id": "ID",
         "name": "Name",
         "addTitle": "Add organization",
         "error": {
-            "name_empty": "Organization name cannot be empty!"
+            "name_empty": "Organization name cannot be empty!",
+            "currency_empty": "Currency cannot be null!",
+            "timezone_empty": "Timezone cannot be empty!",
+            "invalid_date_format": "Invalid local date format!",
+            "invalid_date_time_format": "Invalid local date time format!",
+            "phone_empty": "Phone number cannot be empty!",
+            "email_empty": "Email cannot be empty!",
+            "country_empty": "Country cannot be empty!"
         },
         "deleteConfirmContent": "Are you sure to delete organization ${0}?",
-        "deleteConfirmTitle": "Confirm delete organization",
-        "streetAddressLine1": "Street Address - Line 1",
-        "city": "City",
-        "state": "State",
-        "zipPostalCode": "Zip postal code",
-        "country": "Country",
-        "phoneNumber": "Phone number",
-        "email": "Email",
-        "currency": "Currency",
-        "timezone": "Timezone",
-        "localDateFormat": "Local date format",
-        "localDateTimeFormat": "Local date time format",
-        "decimalMark": "Decimal mark",
-        "logoUrl": "Logo URL",
-        "iconUrl": "Icon URL",
-        "address": "Address",
-        "contact": "Contact",
-        "basicInfo": "Basic info",
-        "dateTime": "Date time"
+        "deleteConfirmTitle": "Confirm delete organization"
     },
     "action": {
         "add": "Add",
@@ -67,5 +49,40 @@
         "no": "No"
     },
     "numberInList": "No.",
-    "tableNoData": "There's no data to display! Please add new data!"
+    "tableNoData": "There's no data to display! Please add new data!",
+    "streetAddressLine1": "Street Address - Line 1",
+    "city": "City",
+    "state": "State",
+    "zipPostalCode": "Zip postal code",
+    "country": "Country",
+    "phoneNumber": "Phone number",
+    "email": "Email",
+    "currency": "Currency",
+    "timezone": "Timezone",
+    "localDateFormat": "Local date format",
+    "localDateTimeFormat": "Local date time format",
+    "decimalMark": "Decimal mark",
+    "logoUrl": "Logo URL",
+    "iconUrl": "Icon URL",
+    "address": "Address",
+    "contact": "Contact",
+    "basicInfo": "Basic info",
+    "dateTime": "Date time",
+    "decimalMarkPeriod": "Period (.)",
+    "decimalMarkComma": "Comma (,)",
+    "currencySymbol": "Symbol",
+    "currencySymbolPosision": "Symbol position",
+    "currencySymbolPosision_true": "At beginning",
+    "currencySymbolPosision_false": "At Ending",
+    "currencyDeleteConfirmContent": "Are you sure to delete currency ${0}?",
+    "currencyDeleteConfirmTitle": "Confirm delete currency",
+    "currencyId": "ID",
+    "currencyScreens": {
+        "addTitle": "Add new currency",
+        "error": {
+            "name_empty": "Currency name cannot be empty!",
+            "symbol_empty": "Symbol cannot be empty!",
+            "decimal_mark_empty": "Decimal mark cannot be empty!"
+        }
+    }
 }
